--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -6,25 +6,23 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".ui.home.HomeFragment">
-
     <ImageView
         android:id="@+id/logo"
         android:layout_width="match_parent"
-        android:layout_height="380dp"
-        android:src="@drawable/logo" />
-
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo"
+        />
     <TextView
         android:id="@+id/wecome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="5dp"
-        android:gravity="center"
         android:text="@string/welcome"
+        android:layout_below="@+id/logo"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:gravity="center"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:layout_marginBottom="5dp"
         />
     <TextView
         android:layout_below="@id/wecome"
@@ -34,6 +32,5 @@
         android:gravity="center"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:textColor="@color/black"
         />
 </RelativeLayout>
