--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_home"
+    >
 
     <fragment
         android:id="@+id/nav_home"
         android:name="com.cma.appquindio.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="@string/menu_inicio"
         tools:layout="@layout/fragment_home" />
-
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.cma.appquindio.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
+        android:id="@+id/nav_hotel"
+        android:name="com.cma.appquindio.ui.hoteles.HotelesFragment"
+        android:label="@string/menu_hoteles"
+        tools:layout="@layout/fragment_hoteles" />
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.cma.appquindio.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_restaurantes"
+        android:name="com.cma.appquindio.ui.restaurantes.RestaurantesFragment"
+        android:label="@string/menu_restaurantes"
+        tools:layout="@layout/fragment_restaurantes" />
+    <fragment
+        android:id="@+id/nav_sitios"
+        android:name="com.cma.appquindio.ui.sitios.SitiosFragment"
+        android:label="@string/menu_sitios"
+        tools:layout="@layout/fragment_sitios" />
+    <fragment
+        android:id="@+id/nav_we"
+        android:name="com.cma.appquindio.ui.we.WeFragment"
+        android:label="Acerca de nosotros"
+        tools:layout="@layout/fragment_we" />
+
 </navigation>
