--- a/app/src/main/res/layout/list_view_object.xml
+++ b/app/src/main/res/layout/list_view_object.xml
@@ -1,56 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/items"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
     android:layout_margin="20dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
     card_view:cardCornerRadius="28dp"
     card_view:cardElevation="6dp"
-    card_view:contentPadding="4dp"
-    android:layout_marginRight="16dp">
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:src="@drawable/ic_menu_camera" />
-        <LinearLayout
-            android:layout_marginLeft="120dp"
+    card_view:contentPadding="4dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="120dp"
+        android:layout_marginRight="20dp"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/photo"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="20dp"
-            android:orientation="vertical"
-            android:padding="16dp"
-            >
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/photo"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                />
+            android:layout_marginBottom="5dp" />
 
-            <TextView
-                android:id="@+id/decription"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/name"
-                android:layout_alignLeft="@+id/photo"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="5dp" />
+        <TextView
+            android:id="@+id/decription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/name"
+            android:layout_alignLeft="@+id/photo"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="5dp" />
 
-            <TextView
-                android:id="@+id/ubication"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/photo"
-                android:layout_below="@+id/decription"
-                android:layout_marginRight="20dp"
-                />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/ubication"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/decription"
+            android:layout_alignLeft="@+id/photo"
+            android:layout_marginRight="20dp" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:src="@drawable/ic_menu_camera" />
 </androidx.cardview.widget.CardView>
