--- a/app/src/main/res/layout-land/list_view_object.xml
+++ b/app/src/main/res/layout-land/list_view_object.xml
@@ -8,7 +8,8 @@
     card_view:cardCornerRadius="28dp"
     card_view:cardElevation="6dp"
     card_view:contentPadding="4dp"
-    android:layout_marginRight="16dp">
+    android:layout_marginRight="16dp"
+    android:id="@+id/items">
         <ImageView
             android:id="@+id/photo"
             android:layout_width="80dp"
