--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,21 +15,48 @@
         android:id="@+id/nav_hotel"
         android:name="com.cma.appquindio.ui.hoteles.HotelesFragment"
         android:label="@string/menu_hoteles"
-        tools:layout="@layout/fragment_hoteles" />
+        tools:layout="@layout/fragment_hoteles" >
+        <action
+            android:id="@+id/action_nav_hotel_to_fragmentDescription"
+            app:destination="@id/fragmentDescription" />
+    </fragment>
     <fragment
         android:id="@+id/nav_restaurantes"
         android:name="com.cma.appquindio.ui.restaurantes.RestaurantesFragment"
         android:label="@string/menu_restaurantes"
-        tools:layout="@layout/fragment_restaurantes" />
+        tools:layout="@layout/fragment_restaurantes" >
+        <action
+            android:id="@+id/action_nav_restaurantes_to_fragmentDescriptionRestaurantes"
+            app:destination="@id/fragmentDescriptionRestaurantes" />
+    </fragment>
     <fragment
         android:id="@+id/nav_sitios"
         android:name="com.cma.appquindio.ui.sitios.SitiosFragment"
         android:label="@string/menu_sitios"
-        tools:layout="@layout/fragment_sitios" />
+        tools:layout="@layout/fragment_sitios" >
+        <action
+            android:id="@+id/action_nav_sitios_to_fragmentDescriptionSitios"
+            app:destination="@id/fragmentDescriptionSitios" />
+    </fragment>
     <fragment
         android:id="@+id/nav_we"
         android:name="com.cma.appquindio.ui.we.WeFragment"
         android:label="Acerca de nosotros"
         tools:layout="@layout/fragment_we" />
+    <fragment
+        android:id="@+id/fragmentDescription"
+        android:name="com.cma.appquindio.ui.FragmentDescription"
+        android:label="fragment_description"
+        tools:layout="@layout/fragment_description_hoteles" />
+    <fragment
+        android:id="@+id/fragmentDescriptionRestaurantes"
+        android:name="com.cma.appquindio.ui.FragmentDescriptionRestaurantes"
+        android:label="fragment_description_restaurantes"
+        tools:layout="@layout/fragment_description_restaurantes" />
+    <fragment
+        android:id="@+id/fragmentDescriptionSitios"
+        android:name="com.cma.appquindio.ui.FragmentDescriptionSitios"
+        android:label="fragment_description_sitios"
+        tools:layout="@layout/fragment_description_sitios" />
 
 </navigation>
